[package]
name = "trustboost-client-2"
version = "0.0.1"
authors = ["v"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = "1.0.83"
cosmrs = "0.9.0"
k256 ={ version = "0.11.4", features = ["ecdsa-core"] }
bip39 = "1.0.0"